manifests-failed/ingress-0.1.8.tgz-manifest.yaml
---
# Source: ingress/templates/service.yaml
# nginx controller admission service
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: ingress
    app.kubernetes.io/version: 0.1.8
    helm.sh/chart: ingress-0.1.8
  name: ingress-nginx-controller-admission
spec:
  ports:
  - appProtocol: https
    name: https-webhook
    port: 443
    targetPort: webhook
  selector:
    app.kubernetes.io/component: controller 
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: ingress
  type: ClusterIP
---
# Source: ingress/templates/daemonset.yaml
# Ingress daemonset
kind: DaemonSet
apiVersion: apps/v1
metadata:
  labels:
    app: ingress-nginx-controller
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: ingress
    app.kubernetes.io/version: 0.1.8
    helm.sh/chart: ingress-0.1.8
  name: ingress-nginx-controller
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller 
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: ingress 
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/name: ingress
        app.kubernetes.io/part-of: ingress
        app.kubernetes.io/version: 0.1.8
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - args:
        - /nginx-ingress-controller
        - --election-id=ingress-nginx-leader
        - --controller-class=k8s.io/ingress-nginx
        - --ingress-class=nginx
        - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
        - --validating-webhook=:8443
        - --validating-webhook-certificate=/usr/local/certificates/cert
        - --validating-webhook-key=/usr/local/certificates/key
        image: "registry.k8s.io/ingress-nginx/controller:v1.7.0@sha256:7612338342a1e7b8090bef78f2a04fffcadd548ccaabe8a47bf7758ff549a5f7"
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: controller
        ports:
        - containerPort: 80 
          name: http
          protocol: TCP
        - containerPort: 443 
          name: https
          protocol: TCP
        - containerPort: 8443
          name: webhook
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
        volumeMounts:
        - mountPath: /usr/local/certificates/
          name: webhook-cert
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 300
      volumes:
      - name: webhook-cert
        secret:
          secretName: ingress-nginx-admission
---
# Source: ingress/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: ingress
    app.kubernetes.io/version: 0.1.8
    helm.sh/chart: ingress-0.1.8
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
# Source: ingress/templates/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: ingress
    app.kubernetes.io/version: 0.1.8
    helm.sh/chart: ingress-0.1.8
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ingress-nginx-controller-admission
      namespace: ingress-0.1.8.tgz
      path: /networking/v1/ingresses
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.nginx.ingress.kubernetes.io
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  sideEffects: None
